Got my blocks set up. Need to figure out how to get the nav to stop pushing down when the screen gets too small.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,22 @@
-header {
-    height: 30px;
-}
-
 .navPane {
     width: 100%;
+    height: 30px;
     background: darkblue;
     color: ghostwhite;
     float: left;
     border: none;
     top: 0;
     position: fixed;
+    z-index: 5;
+}
+
+nav {
+    float: right;
+    margin-right: 30px;
 }
 
 .myName {
+    float: left;
     margin-left: 20%;
 }
 
@@ -24,17 +28,10 @@ header {
     color: orchid;
 }
 
-nav {
-    float: right;
-    margin-right: 30px;
-}
-
-.body {
-    margin-left: 220px;
-}
-
 .mainContent {
     width: 100%;
+    position: relative;
+    top: 60px;
 }
 
 article {
@@ -52,4 +49,13 @@ article {
 
 article.h1 {
     text-align: center;
+}
+
+.details {
+    width: 100%;
+    padding: 15px 0;
+    text-align: center;
+    position: absolute;
+    top: 160px;
+
 }
